# ONNXAudioClassifier

./: .gitignore  CMakeLists.txt  README.md  model.onnx
audio/: piano1.aiff
include/: Utils.h
src/: main.cpp
